Fixed Zombie spawning and stats